--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,11 +5,5 @@
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     </span>
   </td>
-  <% if current_user?(micropost.user) %>
-    <td>
-      <%= link_to "delete", micropost, method: :delete,
-                                       confirm: "You sure?",
-                                       title: micropost.content %>
-    </td>
-  <% end %>
+  <%= render 'shared/micropost_delete', micropost: micropost %>
 </tr>
